--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -1,8 +1,9 @@
-# Deployment for HTML app
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: html-app
+  name: html-app-deployment
+  labels:
+    app: html-app
 spec:
   replicas: 1
   selector:
@@ -14,23 +15,20 @@ spec:
         app: html-app
     spec:
       containers:
-      - name: html-app
-        image: aniketwakekar/test-html:1.0
-        ports:
-        - containerPort: 80
-
+        - name: html-app
+          image: aniketwakekar/test-html:1.0
+          ports:
+            - containerPort: 80
 ---
-
-# Service to expose HTML app
 apiVersion: v1
 kind: Service
 metadata:
-  name: html-service
+  name: html-app-service
 spec:
   type: NodePort
   selector:
     app: html-app
   ports:
-  - port: 80         # Port inside the cluster
-    targetPort: 80   # Container port
-    nodePort: 30007  # Accessible externally on Minikube VM
+    - port: 80
+      targetPort: 80
+      nodePort: 30080
