--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -19,16 +19,18 @@ spec:
           image: aniketwakekar/test-html:1.0
           ports:
             - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: html-app-service
 spec:
-  type: NodePort
+  type: NodePort   # exposes service externally
   selector:
     app: html-app
   ports:
-    - port: 80
-      targetPort: 80
-      nodePort: 30080
+    - protocol: TCP
+      port: 80         # internal cluster port
+      targetPort: 80   # container port
+      nodePort: 30080  # external port accessible on
